# Competitive-programming-chatbot

./: .env  .gitignore  MODEL_SETUP_GUIDE.md  README.md  colab_api_setup.py  config.py  pyproject.toml
backend/: main.py
frontend/: app.py
minor_project_cp_chatbot.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
